test/elaboration/bad/typeclass_overlapping_instances.mle
class H 'a { x : 'a }
instance H int { x = 42 }
instance H int { x = 0 }